--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,7 @@
   ],
   "dependencies": {
     "angular": ">=1.4.0",
-    "tinymce": "5.10.9"
+    "tinymce": "~5.10.x"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.x"
